--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,9 @@ jobs:
         # gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
         # gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
     - name: Debug snapshot publish
-      run: echo "matrix.snapshot == ${{ matrix.snapshot }}, gitub.event_name == ${{ github.event_name }}, JODA_DEFAULT = $JODA_DEFAULT"
+      if: ${{ matrix.debug }}
+      # ^^^ only run if changed
+      run: echo "matrix.snapshot == ${{ matrix.snapshot }}, gitub.event_name == ${{ github.event_name }}"
     - name: Build
       # Note: build separately first with default joda
       run: ./mvnw -B -q -ff -ntp -DskipTests clean package
