--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson datatype: Joda</name>
-  <version>2.18.0</version>
+  <version>2.18.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Add-on module for Jackson (https://github.com/FasterXML/jackson) to support Joda (https://www.joda.org/joda-time/) data types.
   </description>
@@ -38,7 +38,7 @@
     <packageVersion.package>${project.groupId}.joda</packageVersion.package>
 
     <!-- for Reproducible Builds -->
-    <project.build.outputTimestamp>2024-09-27T04:14:03Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2024-09-27T04:15:05Z</project.build.outputTimestamp>
 
     <!-- to allow overriding Joda dep from CI -->
     <!-- Baseline was 2.2 for Jackson 2.4: no new functionality used from laster
