--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <groupId>com.fasterxml.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson datatype: Joda</name>
-  <version>2.17.3-SNAPSHOT</version>
+  <version>2.17.3</version>
   <packaging>jar</packaging>
   <description>Add-on module for Jackson (https://github.com/FasterXML/jackson) to support Joda (https://www.joda.org/joda-time/) data types.
   </description>
@@ -30,7 +30,7 @@
     <connection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</developerConnection>
     <url>https://github.com/FasterXML/jackson-datatype-joda</url>
-    <tag>HEAD</tag>
+    <tag>jackson-datatype-joda-2.17.3</tag>
   </scm>
   <properties>
     <!-- Generate PackageVersion.java into this directory. -->
@@ -38,7 +38,7 @@
     <packageVersion.package>${project.groupId}.joda</packageVersion.package>
 
     <!-- for Reproducible Builds -->
-    <project.build.outputTimestamp>2024-07-05T17:54:26Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2024-11-01T21:37:58Z</project.build.outputTimestamp>
 
     <!-- to allow overriding Joda dep from CI -->
     <!-- Baseline was 2.2 for Jackson 2.4: no new functionality used from laster
