--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,12 +48,8 @@ jobs:
         # See https://github.com/actions/setup-java/blob/v2/docs/advanced-usage.md#Publishing-using-Apache-Maven
         # gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
         # gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
-    - name: Debug snapshot publish
-      if: ${{ matrix.debug }}
-      # ^^^ only run if changed
-      run: echo "matrix.snapshot == ${{ matrix.snapshot }}, gitub.event_name == ${{ github.event_name }}"
     - name: Build
-      # Note: build separately first with default joda
+      # Note: build separately first with default Joda
       run: ./mvnw -B -q -ff -ntp -DskipTests clean package
     - name: Test
       # Note: actual testing to use matrix-version of Joda
