--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
   <parent>
     <groupId>tools.jackson</groupId>
     <artifactId>jackson-base</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-rc1-SNAPSHOT</version>
   </parent>
   <groupId>tools.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson datatype: Joda</name>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0-rc1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>Add-on module for Jackson (http://github.com/FasterXML/jackson) to support
 Joda (https://www.joda.org/joda-time/) data types.
@@ -32,7 +32,7 @@ Joda (https://www.joda.org/joda-time/) data types.
     <packageVersion.package>${project.groupId}.joda</packageVersion.package>
 
     <!-- for Reproducible Builds -->
-    <project.build.outputTimestamp>2022-11-27T00:00:00Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-02-27T00:28:44Z</project.build.outputTimestamp>
 
     <!-- to allow overriding Joda dep from CI -->
     <!-- Baseline was 2.2 for Jackson 2.4: no new functionality used from laster
@@ -49,11 +49,6 @@ Joda (https://www.joda.org/joda-time/) data types.
     <!-- Configuration properties for the OSGi maven-bundle-plugin -->
     <osgi.export>${project.groupId}.joda.*</osgi.export>
     <osgi.versionpolicy>${range;[===,+);${@}}</osgi.versionpolicy>
-
-    <!-- [databind#4820]: Java 17 baseline -->
-    <javac.src.version>17</javac.src.version>
-    <javac.target.version>17</javac.target.version>
-
   </properties>
 
   <dependencies>
