--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <groupId>tools.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
   <name>Jackson datatype: Joda</name>
-  <version>3.0.0-rc2-SNAPSHOT</version>
+  <version>3.0.0-rc2</version>
   <packaging>jar</packaging>
   <description>Add-on module for Jackson (http://github.com/FasterXML/jackson) to support
 Joda (https://www.joda.org/joda-time/) data types.
@@ -24,7 +24,7 @@ Joda (https://www.joda.org/joda-time/) data types.
     <connection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</connection>
     <developerConnection>scm:git:git@github.com:FasterXML/jackson-datatype-joda.git</developerConnection>
     <url>http://github.com/FasterXML/jackson-datatype-joda</url>    
-    <tag>HEAD</tag>
+    <tag>jackson-datatype-joda-3.0.0-rc2</tag>
   </scm>
   <properties>
     <!-- Generate PackageVersion.java into this directory. -->
@@ -32,7 +32,7 @@ Joda (https://www.joda.org/joda-time/) data types.
     <packageVersion.package>${project.groupId}.joda</packageVersion.package>
 
     <!-- for Reproducible Builds -->
-    <project.build.outputTimestamp>2025-03-08T01:15:13Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-03-28T23:39:12Z</project.build.outputTimestamp>
 
     <!-- to allow overriding Joda dep from CI -->
     <!-- Baseline was 2.2 for Jackson 2.4: no new functionality used from laster
