--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>tools.jackson</groupId>
     <artifactId>jackson-base</artifactId>
-    <version>3.0.0-rc3-SNAPSHOT</version>
+    <version>3.0.0-rc3</version>
   </parent>
   <groupId>tools.jackson.datatype</groupId>
   <artifactId>jackson-datatype-joda</artifactId>
